Fix svg manipulation on firefox

--- a/public/index.css
+++ b/public/index.css
@@ -153,7 +153,7 @@ html, body, .container {
 }
 
 .rank .hash {
-    font-size: 3em;
+    /*font-size: 3em;*/
     font-weight: 500;
     position: relative;
     z-index: 1;
@@ -161,7 +161,7 @@ html, body, .container {
 
 .rank .score {
     position: relative;
-    font-size: 2em;
+    /*font-size: 2em;*/
     z-index: 1;
 }
 
